@@ -17,7 +17,8 @@ print 'Entering infinite loop; hit CTRL-C to exit'
 while True:
     # Establish connection with client.    
     c, (client_host, client_port) = s.accept()
-    print 'Got connection from', client_host, client_port
-    c.send('Thank you for connecting')
-    c.send("good bye.")
+    print c.recv(1000)
+    c.send('HTTP/1.0 200 OK\r\n')
+    c.send("Content-Type: text/html\r\n\r\n")
+    c.send('<html><body><h1>Hello, world</h1> this is aliomar''s Web server</body></html>')
     c.close()
